--- a/github-blogging.html
+++ b/github-blogging.html
@@ -3,10 +3,10 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://loadedtaylor.com/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://loadedtaylor.com/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="https://loadedtaylor.com/theme/font-awesome/css/font-awesome.min.css">
 
 
 
@@ -16,21 +16,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="HandheldFriendly" content="True" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="robots" content="" />
+  <meta name="robots" content="index, follow" />
 
 
 <meta name="author" content="Taylor Brazelton" />
 <meta name="description" content="Hello internet! I'm just going to get stright to the point, I use to have a personal/tech blog @ tech-fyi.net but like bread, it got stale. I started it over 7 years ago when I was in high school. Since then, I have graduated with a bachelor's ..." />
 <meta name="keywords" content="blog, github, blogging, tech-fyi, new, first, post">
-<meta property="og:site_name" content="Loaded Taylor"/>
+<meta property="og:site_name" content="LOADED TAYLOR"/>
 <meta property="og:title" content="Github Blogging"/>
 <meta property="og:description" content="Hello internet! I'm just going to get stright to the point, I use to have a personal/tech blog @ tech-fyi.net but like bread, it got stale. I started it over 7 years ago when I was in high school. Since then, I have graduated with a bachelor's ..."/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="/github-blogging.html"/>
+<meta property="og:url" content="https://loadedtaylor.com/github-blogging.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2016-06-23 21:06:00-04:00"/>
 <meta property="article:modified_time" content="2016-06-23 21:06:00-04:00"/>
-<meta property="article:author" content="/author/taylor-brazelton.html">
+<meta property="article:author" content="https://loadedtaylor.com/author/taylor-brazelton.html">
 <meta property="article:section" content="general"/>
 <meta property="article:tag" content="blog"/>
 <meta property="article:tag" content="github"/>
@@ -40,16 +40,16 @@
 <meta property="article:tag" content="first"/>
 <meta property="article:tag" content="post"/>
 <meta property="og:image" content="https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120">
-  <title>Loaded Taylor &ndash; Github Blogging</title>
+  <title>LOADED TAYLOR &ndash; Github Blogging</title>
 </head>
 <body>
   <aside>
     <div>
-      <a href="">
-        <img src="https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120" alt="Loaded Taylor" title="Loaded Taylor">
+      <a href="https://loadedtaylor.com">
+        <img src="https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120" alt="Taylor Brazelton" title="Taylor Brazelton">
       </a>
-      <h1><a href="">Loaded Taylor</a></h1>
-      <nav>
+      <h1><a href="https://loadedtaylor.com">Taylor Brazelton</a></h1>
+<p>loaded with information</p>      <nav>
         <ul class="list">
           <li><a href="#" target="_blank">Home</a></li>
           <li><a href="#" target="_blank">About</a></li>
@@ -63,11 +63,14 @@
     </div>
   </aside>
   <main>
+    <nav>
+      <a href="https://loadedtaylor.com">Home</a>
+    </nav>
 
 <article>
   <header>
     <h1 id="github-blogging">Github Blogging</h1>
-    <p>Posted on Thu 23 June 2016 in <a href="/category/general.html">general</a></p>
+    <p>Posted on Thu 23 June 2016 in <a href="https://loadedtaylor.com/category/general.html">general</a></p>
   </header>
   <div>
     <p>Hello internet!</p>
@@ -76,13 +79,13 @@
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="/tag/blog.html">blog</a>
-      <a href="/tag/github.html">github</a>
-      <a href="/tag/blogging.html">blogging</a>
-      <a href="/tag/tech-fyi.html">tech-fyi</a>
-      <a href="/tag/new.html">new</a>
-      <a href="/tag/first.html">first</a>
-      <a href="/tag/post.html">post</a>
+      <a href="https://loadedtaylor.com/tag/blog.html">blog</a>
+      <a href="https://loadedtaylor.com/tag/github.html">github</a>
+      <a href="https://loadedtaylor.com/tag/blogging.html">blogging</a>
+      <a href="https://loadedtaylor.com/tag/tech-fyi.html">tech-fyi</a>
+      <a href="https://loadedtaylor.com/tag/new.html">new</a>
+      <a href="https://loadedtaylor.com/tag/first.html">first</a>
+      <a href="https://loadedtaylor.com/tag/post.html">post</a>
     </p>
   </div>
 <div id="disqus_thread"></div>
@@ -110,10 +113,10 @@
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " Loaded Taylor ",
-  "url" : "",
+  "name": " LOADED TAYLOR ",
+  "url" : "https://loadedtaylor.com",
   "image": "https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120",
-  "description": ""
+  "description": "Loaded with information, Taylor Brazelton seeks to relieve this pain by distributing some to the world on this blog."
 }
 </script>
 <script type="application/ld+json">
@@ -127,10 +130,10 @@
   "author": {
     "@type": "Person",
     "name": "Taylor Brazelton",
-    "url": "/author/taylor-brazelton.html"
+    "url": "https://loadedtaylor.com/author/taylor-brazelton.html"
   },
   "image": "https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120",
-  "url": "/github-blogging.html",
+  "url": "https://loadedtaylor.com/github-blogging.html",
   "description": "Hello internet! I'm just going to get stright to the point, I use to have a personal/tech blog @ tech-fyi.net but like bread, it got stale. I started it over 7 years ago when I was in high school. Since then, I have graduated with a bachelor's ..."
 }
 </script></body>
