--- a/tags.html
+++ b/tags.html
@@ -3,10 +3,10 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://loadedtaylor.com/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://loadedtaylor.com/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="https://loadedtaylor.com/theme/font-awesome/css/font-awesome.min.css">
 
 
 
@@ -16,29 +16,29 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="HandheldFriendly" content="True" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="robots" content="" />
+  <meta name="robots" content="index, follow" />
 
 
     <meta name="author" content="Taylor Brazelton" />
-    <meta name="description" content="" />
-<meta property="og:site_name" content="Loaded Taylor"/>
+    <meta name="description" content="Loaded with information, Taylor Brazelton seeks to relieve this pain by distributing some to the world on this blog." />
+<meta property="og:site_name" content="LOADED TAYLOR"/>
 <meta property="og:type" content="blog"/>
-<meta property="og:title" content="Loaded Taylor"/>
-<meta property="og:description" content=""/>
+<meta property="og:title" content="LOADED TAYLOR"/>
+<meta property="og:description" content="Loaded with information, Taylor Brazelton seeks to relieve this pain by distributing some to the world on this blog."/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content=""/>
+<meta property="og:url" content="https://loadedtaylor.com"/>
 <meta property="og:image" content="https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120">
 
-  <title>Loaded Taylor &ndash; Tags</title>
+  <title>LOADED TAYLOR &ndash; Tags</title>
 </head>
 <body>
   <aside>
     <div>
-      <a href="">
-        <img src="https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120" alt="Loaded Taylor" title="Loaded Taylor">
+      <a href="https://loadedtaylor.com">
+        <img src="https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120" alt="Taylor Brazelton" title="Taylor Brazelton">
       </a>
-      <h1><a href="">Loaded Taylor</a></h1>
-      <nav>
+      <h1><a href="https://loadedtaylor.com">Taylor Brazelton</a></h1>
+<p>loaded with information</p>      <nav>
         <ul class="list">
           <li><a href="#" target="_blank">Home</a></li>
           <li><a href="#" target="_blank">About</a></li>
@@ -52,19 +52,22 @@
     </div>
   </aside>
   <main>
+    <nav>
+      <a href="https://loadedtaylor.com">Home</a>
+    </nav>
 
 <article>
   <header>
     <h1>Tags</h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="/tag/blog.html">blog</a> (1)</li>
-          <li><a href="/tag/blogging.html">blogging</a> (1)</li>
-          <li><a href="/tag/first.html">first</a> (1)</li>
-          <li><a href="/tag/github.html">github</a> (1)</li>
-          <li><a href="/tag/new.html">new</a> (1)</li>
-          <li><a href="/tag/post.html">post</a> (1)</li>
-          <li><a href="/tag/tech-fyi.html">tech-fyi</a> (1)</li>
+    <ul class="list">          <li><a href="https://loadedtaylor.com/tag/blog.html">blog</a> (1)</li>
+          <li><a href="https://loadedtaylor.com/tag/blogging.html">blogging</a> (1)</li>
+          <li><a href="https://loadedtaylor.com/tag/first.html">first</a> (1)</li>
+          <li><a href="https://loadedtaylor.com/tag/github.html">github</a> (1)</li>
+          <li><a href="https://loadedtaylor.com/tag/new.html">new</a> (1)</li>
+          <li><a href="https://loadedtaylor.com/tag/post.html">post</a> (1)</li>
+          <li><a href="https://loadedtaylor.com/tag/tech-fyi.html">tech-fyi</a> (1)</li>
     </ul>
   </div>
 </article>
@@ -82,10 +85,10 @@
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " Loaded Taylor ",
-  "url" : "",
+  "name": " LOADED TAYLOR ",
+  "url" : "https://loadedtaylor.com",
   "image": "https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120",
-  "description": ""
+  "description": "Loaded with information, Taylor Brazelton seeks to relieve this pain by distributing some to the world on this blog."
 }
 </script>
 </body>
