Updated url layout for blog posts.

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -30,7 +30,7 @@
 <meta property="og:url" content="https://loadedtaylor.com"/>
 <meta property="og:image" content="https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120">
 
-  <title>LOADED TAYLOR &ndash; Posts by: Taylor Brazelton</title>
+  <title>LOADED TAYLOR &ndash; About Me</title>
 </head>
 <body>
   <aside>
@@ -62,22 +62,17 @@
 
 <article>
   <header>
-    <h2><a href="https://loadedtaylor.com/2016/Jun/23/github-blogging/#github-blogging">Github Blogging</a></h2>
-    <p>
-      Posted on Thu 23 June 2016 in <a href="https://loadedtaylor.com/category/general.html">general</a>
-      &#8226; Tagged with
-      <a href="https://loadedtaylor.com/tag/blog.html">blog</a>,      <a href="https://loadedtaylor.com/tag/github.html">github</a>,      <a href="https://loadedtaylor.com/tag/blogging.html">blogging</a>,      <a href="https://loadedtaylor.com/tag/tech-fyi.html">tech-fyi</a>,      <a href="https://loadedtaylor.com/tag/new.html">new</a>,      <a href="https://loadedtaylor.com/tag/first.html">first</a>,      <a href="https://loadedtaylor.com/tag/post.html">post</a>      &#8226; <a href="https://loadedtaylor.com/2016/Jun/23/github-blogging/#disqus_thread">Leave a comment</a>
-    </p>
+    <h1 id="about-me">About Me</h1>
   </header>
   <div>
-      <p>Hello internet!</p>
-<p>I'm just going to get stright to the point, I use to have a personal/tech blog @ <a href="http://tech-fyi.net">tech-fyi.net</a> but like bread, it got stale. I started it over 7 years ago when I was in high school. Since then, I have graduated with a bachelor's ...</p>
-      <a class="btn" href="https://loadedtaylor.com/2016/Jun/23/github-blogging/#github-blogging">Continue reading</a>
+    <h3>Who Am I?</h3>
+<p>I'm a guy with passion for entrepreneurship and technology!</p>
+<h3>Interesting Fact:</h3>
+<p>I like to juggle.</p>
+<h3>Education:</h3>
+<p>B.S. in Computer Science from Purdue</p>
   </div>
 </article>
-
-  <div class="pagination">
-  </div>
 
     <footer>
         <p>&copy; Taylor Brazelton </p>
@@ -97,15 +92,6 @@
   "image": "https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120",
   "description": "Loaded with information, Taylor Brazelton seeks to share this information by distributing some to the world on this blog."
 }
-</script>
-<script type="text/javascript">
-    var disqus_shortname = 'loadedtaylor';
-    (function () {
-        var s = document.createElement('script'); s.async = true;
-        s.type = 'text/javascript';
-        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
-        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-    }());
 </script>
 </body>
 </html>
