--- a/categories.html
+++ b/categories.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="https://loadedtaylor.com/theme/font-awesome/css/font-awesome.min.css">
 
 
+    <link href="https://loadedtaylor.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="LOADED TAYLOR Atom">
 
 
 
@@ -20,11 +21,11 @@
 
 
     <meta name="author" content="Taylor Brazelton" />
-    <meta name="description" content="Loaded with information, Taylor Brazelton seeks to relieve this pain by distributing some to the world on this blog." />
+    <meta name="description" content="Loaded with information, Taylor Brazelton seeks to share this information by distributing some to the world on this blog." />
 <meta property="og:site_name" content="LOADED TAYLOR"/>
 <meta property="og:type" content="blog"/>
 <meta property="og:title" content="LOADED TAYLOR"/>
-<meta property="og:description" content="Loaded with information, Taylor Brazelton seeks to relieve this pain by distributing some to the world on this blog."/>
+<meta property="og:description" content="Loaded with information, Taylor Brazelton seeks to share this information by distributing some to the world on this blog."/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="https://loadedtaylor.com"/>
 <meta property="og:image" content="https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120">
@@ -40,8 +41,7 @@
       <h1><a href="https://loadedtaylor.com">Taylor Brazelton</a></h1>
 <p>loaded with information</p>      <nav>
         <ul class="list">
-          <li><a href="#" target="_blank">Home</a></li>
-          <li><a href="#" target="_blank">About</a></li>
+          <li><a href="https://loadedtaylor.com/pages/about-me.html#about-me">About Me</a></li>
         </ul>
       </nav>
       <ul class="social">
@@ -54,6 +54,10 @@
   <main>
     <nav>
       <a href="https://loadedtaylor.com">Home</a>
+      <a href="/archives.html">Archives</a>
+      <a href="/categories.html">Categories</a>
+      <a href="/tags.html">Tags</a>
+      <a href="https://loadedtaylor.com/feeds/all.atom.xml">Atom</a>
     </nav>
 
 <article>
@@ -83,7 +87,7 @@
   "name": " LOADED TAYLOR ",
   "url" : "https://loadedtaylor.com",
   "image": "https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120",
-  "description": "Loaded with information, Taylor Brazelton seeks to relieve this pain by distributing some to the world on this blog."
+  "description": "Loaded with information, Taylor Brazelton seeks to share this information by distributing some to the world on this blog."
 }
 </script>
 </body>
