Finalized the Getting Started with Pelican post.

--- a/categories.html
+++ b/categories.html
@@ -67,6 +67,7 @@
   <div>
     <ul class="list">
       <li><a href="https://loadedtaylor.com/category/general.html">general</a> (1)</li>
+      <li><a href="https://loadedtaylor.com/category/how-to.html">How To</a> (1)</li>
     </ul>
   </div>
 </article>
