--- a/tags.html
+++ b/tags.html
@@ -68,10 +68,16 @@
     <ul class="list">          <li><a href="https://loadedtaylor.com/tag/blog.html">blog</a> (1)</li>
           <li><a href="https://loadedtaylor.com/tag/blogging.html">blogging</a> (1)</li>
           <li><a href="https://loadedtaylor.com/tag/first.html">first</a> (1)</li>
+          <li><a href="https://loadedtaylor.com/tag/getting.html">getting</a> (1)</li>
           <li><a href="https://loadedtaylor.com/tag/github.html">github</a> (1)</li>
           <li><a href="https://loadedtaylor.com/tag/new.html">new</a> (1)</li>
+          <li><a href="https://loadedtaylor.com/tag/pelican.html">pelican</a> (1)</li>
           <li><a href="https://loadedtaylor.com/tag/post.html">post</a> (1)</li>
+          <li><a href="https://loadedtaylor.com/tag/python.html">python</a> (1)</li>
+          <li><a href="https://loadedtaylor.com/tag/started.html">started</a> (1)</li>
           <li><a href="https://loadedtaylor.com/tag/tech-fyi.html">tech-fyi</a> (1)</li>
+          <li><a href="https://loadedtaylor.com/tag/using.html">using</a> (1)</li>
+          <li><a href="https://loadedtaylor.com/tag/virtualenv.html">virtualenv</a> (1)</li>
     </ul>
   </div>
 </article>
