--- a/archives.html
+++ b/archives.html
@@ -66,6 +66,8 @@
   </header>
   <div>
     <dl>
+      <dt>Mon 27 June 2016</dt>
+      <dd><a href="https://loadedtaylor.com/2016/Jun/27/getting-started-with-pelican/">Getting Started with Pelican</a></dd>
       <dt>Thu 23 June 2016</dt>
       <dd><a href="https://loadedtaylor.com/2016/Jun/23/github-blogging/">Github Blogging</a></dd>
     </dl>
