Added new drafts and new blog post about installing docker.

--- a/archives.html
+++ b/archives.html
@@ -66,6 +66,8 @@
   </header>
   <div>
     <dl>
+      <dt>Fri 22 July 2016</dt>
+      <dd><a href="https://taylorbrazelton.com/2016/Jul/22/easiest-way-to-install-docker-on-linux/">Easiest Way To Install Docker On Linux</a></dd>
       <dt>Mon 27 June 2016</dt>
       <dd><a href="https://taylorbrazelton.com/2016/Jun/27/getting-started-with-pelican/">Getting Started with Pelican</a></dd>
       <dt>Thu 23 June 2016</dt>
