--- a/tags.html
+++ b/tags.html
@@ -67,9 +67,13 @@
   <div>
     <ul class="list">          <li><a href="https://taylorbrazelton.com/tag/blog.html">blog</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/blogging.html">blogging</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/docker.html">docker</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/easiest.html">easiest</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/first.html">first</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/getting.html">getting</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/github.html">github</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/install.html">install</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/linux.html">linux</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/new.html">new</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/pelican.html">pelican</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/post.html">post</a> (1)</li>
