--- a/drafts/unknown-python-std-library-functions.html
+++ b/drafts/unknown-python-std-library-functions.html
@@ -20,17 +20,27 @@
   <meta name="robots" content="index, follow" />
 
 
-    <meta name="author" content="Taylor Brazelton" />
-    <meta name="description" content="Loaded with information, Taylor Brazelton seeks to share this information by distributing some to the world on this blog." />
+<meta name="author" content="Taylor Brazelton" />
+<meta name="description" content="Cool Python Standard Library Functions filter() map() pow() reduce() reload() zip()" />
+<meta name="keywords" content="cool, python, std, standard, library, functions">
 <meta property="og:site_name" content="TAYLOR BRAZELTON"/>
-<meta property="og:type" content="blog"/>
-<meta property="og:title" content="TAYLOR BRAZELTON"/>
-<meta property="og:description" content="Loaded with information, Taylor Brazelton seeks to share this information by distributing some to the world on this blog."/>
+<meta property="og:title" content="Unknown Python Std Library Functions."/>
+<meta property="og:description" content="Cool Python Standard Library Functions filter() map() pow() reduce() reload() zip()"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://taylorbrazelton.com"/>
+<meta property="og:url" content="https://taylorbrazelton.com/drafts/unknown-python-std-library-functions.html"/>
+<meta property="og:type" content="article"/>
+<meta property="article:published_time" content="2016-07-18 14:00:00-04:00"/>
+<meta property="article:modified_time" content="2016-07-18 00:00:00-04:00"/>
+<meta property="article:author" content="https://taylorbrazelton.com/author/taylor-brazelton.html">
+<meta property="article:section" content="python"/>
+<meta property="article:tag" content="cool"/>
+<meta property="article:tag" content="python"/>
+<meta property="article:tag" content="std"/>
+<meta property="article:tag" content="standard"/>
+<meta property="article:tag" content="library"/>
+<meta property="article:tag" content="functions"/>
 <meta property="og:image" content="https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120">
-
-  <title>TAYLOR BRAZELTON &ndash; Categories</title>
+  <title>TAYLOR BRAZELTON &ndash; Unknown Python Std Library Functions.</title>
 </head>
 <body>
   <aside>
@@ -62,14 +72,38 @@
 
 <article>
   <header>
-    <h1>Categories</h1>
+    <h1 id="unknown-python-std-library-functions">Unknown Python Std Library Functions.</h1>
+    <p>Posted on Mon 18 July 2016 in <a href="https://taylorbrazelton.com/category/python.html">python</a></p>
   </header>
   <div>
-    <ul class="list">
-      <li><a href="https://taylorbrazelton.com/category/general.html">general</a> (2)</li>
-      <li><a href="https://taylorbrazelton.com/category/how-to.html">How To</a> (1)</li>
-    </ul>
+    <h1>Cool Python Standard Library Functions</h1>
+<p>filter()
+map()
+pow()
+reduce()
+reload()
+zip()</p>
   </div>
+  <div class="tag-cloud">
+    <p>
+      <a href="https://taylorbrazelton.com/tag/cool.html">cool</a>
+      <a href="https://taylorbrazelton.com/tag/python.html">python</a>
+      <a href="https://taylorbrazelton.com/tag/std.html">std</a>
+      <a href="https://taylorbrazelton.com/tag/standard.html">standard</a>
+      <a href="https://taylorbrazelton.com/tag/library.html">library</a>
+      <a href="https://taylorbrazelton.com/tag/functions.html">functions</a>
+    </p>
+  </div>
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+    var disqus_shortname = 'loadedtaylor';
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 </article>
 
     <footer>
@@ -101,5 +135,22 @@
   "description": "Loaded with information, Taylor Brazelton seeks to share this information by distributing some to the world on this blog."
 }
 </script>
-</body>
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "BlogPosting",
+  "name": "Unknown Python Std Library Functions.",
+  "headline": "Unknown Python Std Library Functions.",
+  "datePublished": "2016-07-18 14:00:00-04:00",
+  "dateModified": "2016-07-18 00:00:00-04:00",
+  "author": {
+    "@type": "Person",
+    "name": "Taylor Brazelton",
+    "url": "https://taylorbrazelton.com/author/taylor-brazelton.html"
+  },
+  "image": "https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120",
+  "url": "https://taylorbrazelton.com/drafts/unknown-python-std-library-functions.html",
+  "description": "Cool Python Standard Library Functions filter() map() pow() reduce() reload() zip()"
+}
+</script></body>
 </html>
