Published the raspberry pi arcade emulator price out.

--- a/tags.html
+++ b/tags.html
@@ -65,19 +65,25 @@
     <h1>Tags</h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="https://taylorbrazelton.com/tag/blog.html">blog</a> (1)</li>
+    <ul class="list">          <li><a href="https://taylorbrazelton.com/tag/arcade.html">arcade</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/blog.html">blog</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/blogging.html">blogging</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/docker.html">docker</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/easiest.html">easiest</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/emulator.html">emulator</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/first.html">first</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/getting.html">getting</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/github.html">github</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/install.html">install</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/linux.html">linux</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/new.html">new</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/out.html">out</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/pelican.html">pelican</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/pi.html">pi</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/post.html">post</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/price.html">price</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/python.html">python</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/raspberry.html">raspberry</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/started.html">started</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/tech-fyi.html">tech-fyi</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/using.html">using</a> (1)</li>
