Added new post -> writting better code.

--- a/drafts/on-prems-the-engineers-perspective.html
+++ b/drafts/on-prems-the-engineers-perspective.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -41,6 +42,7 @@
 <meta property="article:tag" content="problems"/>
 <meta property="article:tag" content="faced"/>
 <meta property="og:image" content="https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120">
+
   <title>TAYLOR BRAZELTON &ndash; On-prems - The Engineer's Perspective</title>
 </head>
 <body>
@@ -50,11 +52,15 @@
         <img src="https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120" alt="Taylor Brazelton" title="Taylor Brazelton">
       </a>
       <h1><a href="https://taylorbrazelton.com">Taylor Brazelton</a></h1>
-<p>loaded with information</p>      <nav>
+
+<p>loaded with information</p>
+      <nav>
         <ul class="list">
           <li><a href="https://taylorbrazelton.com/pages/about-me.html#about-me">About Me</a></li>
+
         </ul>
       </nav>
+
       <ul class="social">
         <li><a class="sc-linkedin" href="https://www.linkedin.com/in/ryanb58" target="_blank"><i class="fa fa-linkedin"></i></a></li>
         <li><a class="sc-github" href="http://github.com/ryanb58" target="_blank"><i class="fa fa-github"></i></a></li>
@@ -64,17 +70,26 @@
   </aside>
   <main>
     <nav>
-      <a href="https://taylorbrazelton.com">Home</a>
+      <a href="https://taylorbrazelton.com">    Home
+</a>
+
       <a href="/archives.html">Archives</a>
       <a href="/categories.html">Categories</a>
       <a href="/tags.html">Tags</a>
-      <a href="https://taylorbrazelton.com/feeds/all.atom.xml">Atom</a>
+
+      <a href="https://taylorbrazelton.com/feeds/all.atom.xml">    Atom
+</a>
+
     </nav>
 
-<article>
+<article class="single">
   <header>
     <h1 id="on-prems-the-engineers-perspective">On-prems - The Engineer's Perspective</h1>
-    <p>Posted on Wed 20 July 2016 in <a href="https://taylorbrazelton.com/category/how-to.html">How To</a></p>
+    <p>
+          Posted on Wed 20 July 2016 in <a href="https://taylorbrazelton.com/category/how-to.html">How To</a>
+
+
+    </p>
   </header>
   <div>
     <p>So you want to build an on-prem. Great! On-prems are cash rich enviroments that
@@ -120,6 +135,9 @@ http://www.cbronline.com/news/cloud/private/how-to-build-a-private-cloud-5-best-
       <a href="https://taylorbrazelton.com/tag/faced.html">faced</a>
     </p>
   </div>
+
+
+
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     var disqus_shortname = 'loadedtaylor';
@@ -129,12 +147,16 @@ http://www.cbronline.com/news/cloud/private/how-to-build-a-private-cloud-5-best-
         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
     })();
 </script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+<noscript>
+        Please enable JavaScript to view comments.
+
+</noscript>
 </article>
 
     <footer>
-        <p>&copy; Taylor Brazelton </p>
-<p>Built using <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a></p>    </footer>
+<p>&copy; Taylor Brazelton </p>
+<p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
+</p>    </footer>
   </main>
 
 <!-- Google Analytics -->
@@ -161,22 +183,5 @@ http://www.cbronline.com/news/cloud/private/how-to-build-a-private-cloud-5-best-
   "description": "Loaded with information, Taylor Brazelton seeks to share this information by distributing some to the world on this blog."
 }
 </script>
-<script type="application/ld+json">
-{
-  "@context": "http://schema.org",
-  "@type": "BlogPosting",
-  "name": "On-prems - The Engineer's Perspective",
-  "headline": "On-prems - The Engineer's Perspective",
-  "datePublished": "2016-07-20 20:00:00-04:00",
-  "dateModified": "2016-07-20 20:00:00-04:00",
-  "author": {
-    "@type": "Person",
-    "name": "Taylor Brazelton",
-    "url": "https://taylorbrazelton.com/author/taylor-brazelton.html"
-  },
-  "image": "https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120",
-  "url": "https://taylorbrazelton.com/drafts/on-prems-the-engineers-perspective.html",
-  "description": "So you want to build an on-prem. Great! On-prems are cash rich enviroments that allow for sales into the entrerprise marketspace without much effort. Right? Well, from your engineers perspectives, no. Sadly on-prems add a lot of complexity that originally was avoided because of the "cloud". Let's dive into a few of these complexities in which your engineers will face. Physical Limits Software Updates Non-Reproduceable Bugs Can only be reproduced on the on-prem Security Billing Support Update System/Policy Guessing At What Your User Is Doing Logging Scaling Uptime/Avalability Lack of Features in the mean time. Tranfering of accounts between onprems and cloud. Clashing of usernames or user spaces. Virtual Deploys Automating Everything Protecting your IP/code. On-Prems are inherritently a security risk for your company, especially if you are using an interprated language. On-prems can easily be torn apart and your application copied/cloned. More Good Reading: https://www.gfi.com/whitepapers/Hybrid_Technology.pdf http://blog.lusis.org/blog/2016/05/15/so-you-wanna-go-onprem-do-ya/ https://blog.gurock.com/staged-releases-saas-on-premise-deployments/ http://www.cbronline.com/news/cloud/private/how-to-build-a-private-cloud-5-best-practices-to-move-on-premise-4773907"
-}
-</script></body>
+</body>
 </html>
