--- a/drafts/unknown-python-std-library-functions.html
+++ b/drafts/unknown-python-std-library-functions.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -40,6 +41,7 @@
 <meta property="article:tag" content="library"/>
 <meta property="article:tag" content="functions"/>
 <meta property="og:image" content="https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120">
+
   <title>TAYLOR BRAZELTON &ndash; Unknown Python Std Library Functions.</title>
 </head>
 <body>
@@ -49,11 +51,15 @@
         <img src="https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120" alt="Taylor Brazelton" title="Taylor Brazelton">
       </a>
       <h1><a href="https://taylorbrazelton.com">Taylor Brazelton</a></h1>
-<p>loaded with information</p>      <nav>
+
+<p>loaded with information</p>
+      <nav>
         <ul class="list">
           <li><a href="https://taylorbrazelton.com/pages/about-me.html#about-me">About Me</a></li>
+
         </ul>
       </nav>
+
       <ul class="social">
         <li><a class="sc-linkedin" href="https://www.linkedin.com/in/ryanb58" target="_blank"><i class="fa fa-linkedin"></i></a></li>
         <li><a class="sc-github" href="http://github.com/ryanb58" target="_blank"><i class="fa fa-github"></i></a></li>
@@ -63,17 +69,26 @@
   </aside>
   <main>
     <nav>
-      <a href="https://taylorbrazelton.com">Home</a>
+      <a href="https://taylorbrazelton.com">    Home
+</a>
+
       <a href="/archives.html">Archives</a>
       <a href="/categories.html">Categories</a>
       <a href="/tags.html">Tags</a>
-      <a href="https://taylorbrazelton.com/feeds/all.atom.xml">Atom</a>
+
+      <a href="https://taylorbrazelton.com/feeds/all.atom.xml">    Atom
+</a>
+
     </nav>
 
-<article>
+<article class="single">
   <header>
     <h1 id="unknown-python-std-library-functions">Unknown Python Std Library Functions.</h1>
-    <p>Posted on Mon 18 July 2016 in <a href="https://taylorbrazelton.com/category/python.html">python</a></p>
+    <p>
+          Posted on Mon 18 July 2016 in <a href="https://taylorbrazelton.com/category/python.html">python</a>
+
+
+    </p>
   </header>
   <div>
     <h1>Cool Python Standard Library Functions</h1>
@@ -94,6 +109,9 @@ zip()</p>
       <a href="https://taylorbrazelton.com/tag/functions.html">functions</a>
     </p>
   </div>
+
+
+
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     var disqus_shortname = 'loadedtaylor';
@@ -103,12 +121,16 @@ zip()</p>
         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
     })();
 </script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+<noscript>
+        Please enable JavaScript to view comments.
+
+</noscript>
 </article>
 
     <footer>
-        <p>&copy; Taylor Brazelton </p>
-<p>Built using <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a></p>    </footer>
+<p>&copy; Taylor Brazelton </p>
+<p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
+</p>    </footer>
   </main>
 
 <!-- Google Analytics -->
@@ -135,22 +157,5 @@ zip()</p>
   "description": "Loaded with information, Taylor Brazelton seeks to share this information by distributing some to the world on this blog."
 }
 </script>
-<script type="application/ld+json">
-{
-  "@context": "http://schema.org",
-  "@type": "BlogPosting",
-  "name": "Unknown Python Std Library Functions.",
-  "headline": "Unknown Python Std Library Functions.",
-  "datePublished": "2016-07-18 14:00:00-04:00",
-  "dateModified": "2016-07-18 00:00:00-04:00",
-  "author": {
-    "@type": "Person",
-    "name": "Taylor Brazelton",
-    "url": "https://taylorbrazelton.com/author/taylor-brazelton.html"
-  },
-  "image": "https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120",
-  "url": "https://taylorbrazelton.com/drafts/unknown-python-std-library-functions.html",
-  "description": "Cool Python Standard Library Functions filter() map() pow() reduce() reload() zip()"
-}
-</script></body>
+</body>
 </html>
