--- a/tags.html
+++ b/tags.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -30,7 +31,8 @@
 <meta property="og:url" content="https://taylorbrazelton.com"/>
 <meta property="og:image" content="https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120">
 
-  <title>TAYLOR BRAZELTON &ndash; Tags</title>
+  <title>TAYLOR BRAZELTON &ndash;     Tags
+</title>
 </head>
 <body>
   <aside>
@@ -39,11 +41,15 @@
         <img src="https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120" alt="Taylor Brazelton" title="Taylor Brazelton">
       </a>
       <h1><a href="https://taylorbrazelton.com">Taylor Brazelton</a></h1>
-<p>loaded with information</p>      <nav>
+
+<p>loaded with information</p>
+      <nav>
         <ul class="list">
           <li><a href="https://taylorbrazelton.com/pages/about-me.html#about-me">About Me</a></li>
+
         </ul>
       </nav>
+
       <ul class="social">
         <li><a class="sc-linkedin" href="https://www.linkedin.com/in/ryanb58" target="_blank"><i class="fa fa-linkedin"></i></a></li>
         <li><a class="sc-github" href="http://github.com/ryanb58" target="_blank"><i class="fa fa-github"></i></a></li>
@@ -53,21 +59,29 @@
   </aside>
   <main>
     <nav>
-      <a href="https://taylorbrazelton.com">Home</a>
+      <a href="https://taylorbrazelton.com">    Home
+</a>
+
       <a href="/archives.html">Archives</a>
       <a href="/categories.html">Categories</a>
       <a href="/tags.html">Tags</a>
-      <a href="https://taylorbrazelton.com/feeds/all.atom.xml">Atom</a>
+
+      <a href="https://taylorbrazelton.com/feeds/all.atom.xml">    Atom
+</a>
+
     </nav>
 
-<article>
+<article class="single">
   <header>
-    <h1>Tags</h1>
+    <h1>    Tags
+</h1>
   </header>
   <div>
     <ul class="list">          <li><a href="https://taylorbrazelton.com/tag/arcade.html">arcade</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/better.html">better</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/blog.html">blog</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/blogging.html">blogging</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/code.html">code</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/docker.html">docker</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/easiest.html">easiest</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/emulator.html">emulator</a> (1)</li>
@@ -82,19 +96,23 @@
           <li><a href="https://taylorbrazelton.com/tag/pi.html">pi</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/post.html">post</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/price.html">price</a> (1)</li>
-          <li><a href="https://taylorbrazelton.com/tag/python.html">python</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/python.html">python</a> (2)</li>
           <li><a href="https://taylorbrazelton.com/tag/raspberry.html">raspberry</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/refactoring.html">refactoring</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/started.html">started</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/tech-fyi.html">tech-fyi</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/tips.html">tips</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/using.html">using</a> (1)</li>
           <li><a href="https://taylorbrazelton.com/tag/virtualenv.html">virtualenv</a> (1)</li>
+          <li><a href="https://taylorbrazelton.com/tag/writing.html">writing</a> (1)</li>
     </ul>
   </div>
 </article>
 
     <footer>
-        <p>&copy; Taylor Brazelton </p>
-<p>Built using <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a></p>    </footer>
+<p>&copy; Taylor Brazelton </p>
+<p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
+</p>    </footer>
   </main>
 
 <!-- Google Analytics -->
