--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -39,11 +40,15 @@
         <img src="https://s.gravatar.com/avatar/3f9df5012e11231e7c9ce7e8ef42135e?s=120" alt="Taylor Brazelton" title="Taylor Brazelton">
       </a>
       <h1><a href="https://taylorbrazelton.com">Taylor Brazelton</a></h1>
-<p>loaded with information</p>      <nav>
+
+<p>loaded with information</p>
+      <nav>
         <ul class="list">
           <li><a href="https://taylorbrazelton.com/pages/about-me.html#about-me">About Me</a></li>
+
         </ul>
       </nav>
+
       <ul class="social">
         <li><a class="sc-linkedin" href="https://www.linkedin.com/in/ryanb58" target="_blank"><i class="fa fa-linkedin"></i></a></li>
         <li><a class="sc-github" href="http://github.com/ryanb58" target="_blank"><i class="fa fa-github"></i></a></li>
@@ -53,14 +58,19 @@
   </aside>
   <main>
     <nav>
-      <a href="https://taylorbrazelton.com">Home</a>
+      <a href="https://taylorbrazelton.com">    Home
+</a>
+
       <a href="/archives.html">Archives</a>
       <a href="/categories.html">Categories</a>
       <a href="/tags.html">Tags</a>
-      <a href="https://taylorbrazelton.com/feeds/all.atom.xml">Atom</a>
+
+      <a href="https://taylorbrazelton.com/feeds/all.atom.xml">    Atom
+</a>
+
     </nav>
 
-<article>
+<article class="single">
   <header>
     <h1 id="about-me">About Me</h1>
   </header>
@@ -75,8 +85,9 @@
 </article>
 
     <footer>
-        <p>&copy; Taylor Brazelton </p>
-<p>Built using <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a></p>    </footer>
+<p>&copy; Taylor Brazelton </p>
+<p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
+</p>    </footer>
   </main>
 
 <!-- Google Analytics -->
